# dev-ai-team

./: .env.example  .gitignore  Cargo.toml  agent-output.md
docs/: .doc-root.yaml  agent-output.md
docs/ui/: README.md
migrations/: 001_initial.sql  002_railway_deployment.sql
prompts/: prompt.txt
src/: config.rs  error.rs  lib.rs  main.rs
src/api/: openapi.rs
src/db/: pool.rs
src/handlers/: chat.rs  mod.rs  projects.rs  runner.rs  tasks.rs
src/models/: agent_run.rs  chat_message.rs  mod.rs  project.rs  reasoning_log.rs  task.rs
src/repositories/: agent_run_repo.rs  chat_repo.rs  mod.rs  project_repo.rs  task_repo.rs
src/services/: agent_service.rs  git_service.rs  mod.rs  railway_service.rs  task_queue.rs
ui/src/: app.css
ui/src/lib/api/: client.ts  types.ts
ui/src/lib/components/: CreateProjectModal.svelte  CreateTaskModal.svelte  Modal.svelte  ProjectCard.svelte  TaskCard.svelte  TaskDetailModal.svelte
ui/src/lib/stores/: projects.ts  tasks.ts
ui/src/routes/: +layout.svelte  +page.svelte
ui/src/routes/projects/[id]/: +page.svelte
